--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
                             <div class="col-12 col-md-auto order-md-3 lg-text-center">
                                 <span>Nuovo studente</span>
-                                <a class="btn btn-outline-light text fs-2 m-1 ms_btn-newstudent" data-bs-toggle="offcanvas" href="#offcanvasRight"
-                                    role="button" aria-controls="offcanvasExample">
+                                <a class="btn btn-outline-light text fs-2 ms_btn-newstudent" data-bs-toggle="offcanvas"
+                                    href="#offcanvasRight" role="button" aria-controls="offcanvasExample">
                                     +
                                 </a>
                                 <!-- OFFCANVAS -->
@@ -199,7 +199,7 @@
                                                     <div class="col-12">
                                                         <div class="row g-3">
                                                             <div class="col-12 col-md-6">
-                                                                <label for="City"class="form-label">
+                                                                <label for="City" class="form-label">
                                                                     Città
                                                                 </label>
                                                                 <input type="text" class="form-control" id="City"
@@ -423,7 +423,8 @@
                                                                     <option value="SB">Solomon Islands</option>
                                                                     <option value="SO">Somalia</option>
                                                                     <option value="ZA">South Africa</option>
-                                                                    <option value="GS">South Georgia & South Islands<option>
+                                                                    <option value="GS">South Georgia & South Islands
+                                                                    <option>
                                                                     <option value="SS">South Sudan</option>
                                                                     <option value="ES">Spain</option>
                                                                     <option value="LK">Sri Lanka</option>
@@ -564,17 +565,26 @@
                 <!-- /Jumbotron -->
             </div>
 
-    </div>
-    </main>
 
 
 
 
 
 
-
+        </main>
 
     </div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
