added: section table

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                             <div class="col-12 col-md-auto order-md-3 lg-text-center">
                                 <span>Nuovo studente</span>
-                                <a class="btn btn-outline-light text fs-2 ms_btn-newstudent" data-bs-toggle="offcanvas"
+                                <a class="btn btn-outline-light ms_btn-newstudent" data-bs-toggle="offcanvas"
                                     href="#offcanvasRight" role="button" aria-controls="offcanvasExample">
                                     +
                                 </a>
@@ -525,26 +525,26 @@
                             <div class="col-12 col-md-auto my-3 my-md-0">
                                 <div class="ms_plantitle d-flex align-items-center">
                                     <h2 class="me-2">Boolean</h2>
-                                    <span class="badge rounded-pill">
+                                    <span class="badge rounded-pill ms_planapp">
                                         Piano blaze
                                     </span>
                                 </div>
 
-                                <div class="ms_planapp d-flex flex-wrap">
-                                    <span class="badge rounded-pill me-1">
+                                <div class=" d-flex flex-wrap">
+                                    <span class="badge rounded-pill me-1 ms_planapp">
                                         3 app
                                     </span>
-                                    <i class="fa-solid fa-angles-right me-1"></i>
-                                    <span class="badge rounded-pill me-1 d-lg-none">
+                                    <i class="fa-solid fa-angles-right m-1 "></i>
+                                    <span class="badge rounded-pill me-1 d-lg-none ms_planapp">
                                         +
                                     </span>
-                                    <span class="badge rounded-pill me-1 d-none d-lg-inline-block">
+                                    <span class="badge rounded-pill me-1 d-none d-lg-inline-block ms_planapp">
                                         Boolean mobile app
                                     </span>
-                                    <span class="badge rounded-pill me-1 d-none d-lg-inline-block">
+                                    <span class="badge rounded-pill me-1 d-none d-lg-inline-block ms_planapp">
                                         Boolean web app
                                     </span>
-                                    <span class="badge rounded-pill me-1 d-none d-lg-inline-block">
+                                    <span class="badge rounded-pill me-1 d-none d-lg-inline-block ms_planapp">
                                         Boolean blog app
                                     </span>
                                 </div>
@@ -563,6 +563,219 @@
                     </div>
                 </div>
                 <!-- /Jumbotron -->
+
+
+                <!-- Main columns and table -->
+
+                <div class="container-fluid">
+                    <div class="row mb-3 py-3">
+                        <div class="col-12 col-lg-8">
+                            <!-- STUDENT CARD -->
+                            <div class="card mb-3">
+                                <h5 class="card-header">Prossime classi</h5>
+                                <div class="card-body">
+                                    <table class="table align-middle">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">Nome</th>
+                                                <th scope="col" class="text-center d-none d-lg-table-cell">Data Inizio
+                                                </th>
+                                                <th scope="col" class="text-center d-none d-md-table-cell">ROI</th>
+                                                <th scope="col" class="text-center">Stato</th>
+                                                <th scope="col" class="text-center">Azioni</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+
+                                            <tr>
+                                                <td class="ms_table">
+                                                    <div class="ms_table-img">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                    </div>
+                                                    <p class="m-0">classe 99</p>
+                                                </td>
+                                                <td class="text-center d-none d-lg-table-cell">16 Feb 2022</td>
+                                                <td class="text-center d-none d-md-table-cell">20%</td>
+                                                <td class="text-center">
+                                                    <span class="badge text-bg-success">Done</span>
+                                                </td>
+                                                <td class="text-center">
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash-can"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr>
+
+                                                <td class="ms_table">
+                                                    <div class="ms_table-img">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                    </div>
+                                                    <p class="m-0">classe 109</p>
+                                                </td>
+                                                <td class="text-center d-none d-lg-table-cell">12 ottobre 2023</td>
+                                                <td class="text-center d-none d-md-table-cell">50%</td>
+                                                <td class="text-center">
+                                                    <span class="badge text-bg-warning text-light">Process</span>
+                                                </td>
+                                                <td class="text-center">
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash-can"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                
+
+                                                <td class="ms_table">
+                                                    <div class="ms_table-img">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                    </div>
+                                                    <p class="m-0">classe 105</p>
+                                                </td>
+                                                <td class="text-center d-none d-lg-table-cell">12 agosto 2023</td>
+                                                <td class="text-center d-none d-md-table-cell">80%</td>
+                                                <td class="text-center">
+                                                    <span class="badge text-bg-success">Done</span>
+                                                </td>
+                                                <td class="text-center">
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash-can"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="ms_table">
+                                                    <div class="ms_table-img">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                    </div>
+                                                    <p class="m-0">classe 104</p>
+                                                </td>
+                                                <td class="text-center d-none d-lg-table-cell">12 ottobre 2022</td>
+                                                <td class="text-center d-none d-md-table-cell">90%</td>
+                                                <td class="text-center">
+                                                    <span class="badge text-bg-success">Done</span>
+                                                </td>
+                                                <td class="text-center">
+                                                    <button type="button" class="btn btn-outline-secondary">
+
+
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash-can"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="ms_table">
+                                                    <div class="ms_table-img">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                    </div>
+                                                    <p class="m-0">classe 107</p>
+                                                </td>
+                                                <td class="text-center d-none d-lg-table-cell">12 ottobre 2024</td>
+                                                <td class="text-center d-none d-md-table-cell">20%</td>
+                                                <td class="text-center">
+                                                    <span class="badge text-bg-danger">Failed</span>
+                                                </td>
+                                                <td class="text-center">
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash-can"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="ms_table">
+                                                    <div class="ms_table-img">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                    </div>
+                                                    <p class="m-0">classe 95</p>
+                                                </td>
+                                                <td class="text-center d-none d-lg-table-cell">20 Feb 2023</td>
+                                                <td class="text-center d-none d-md-table-cell">100%</td>
+                                                <td class="text-center">
+                                                    <span class="badge text-bg-success">Done</span>
+                                                </td>
+                                                <td class="text-center">
+                                                    <button type="button" class="btn btn-outline-secondary">
+
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash-can"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="ms_table">
+                                                    <div class="ms_table-img">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                    </div>
+                                                    <p class="m-0">classe 100</p>
+                                                </td>
+                                                <td class="text-center d-none d-lg-table-cell">12 ottobre 2023</td>
+
+
+                                                <td class="text-center d-none d-md-table-cell">20%</td>
+                                                <td class="text-center">
+                                                    <span class="badge text-bg-danger">Failed</span>
+                                                </td>
+                                                <td class="text-center">
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash-can"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td class="ms_table">
+                                                    <div class="ms_table-img">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                    </div>
+                                                    <p class="m-0">classe 94</p>
+                                                </td>
+                                                <td class="text-center d-none d-lg-table-cell">22 dicembre 2022</td>
+                                                <td class="text-center d-none d-md-table-cell">78%</td>
+                                                <td class="text-center">
+                                                    <span class="badge text-bg-success">Done</span>
+                                                </td>
+
+                                                <td class="text-center">
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button type="button" class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash-can"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <!-- /STUDENT CARD -->
+                        </div>
+
+                    </div>
+
+                </div> 
+
+
             </div>
 
 
@@ -589,7 +802,7 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    <script src=" https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
